--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "yabacon/paystack-php": "^2.2",
         "unicodeveloper/laravel-paystack": "^1.0",
         "wildbit/swiftmailer-postmark": "^3.3"
     },
