--- a/.github/workflows/live.yml
+++ b/.github/workflows/live.yml
@@ -17,7 +17,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.0
       with:
-        server: cpanel.legitsms.com
+        server: textverifications.com/cpanel
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         server-dir: public_html/
